--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,53 @@
 plugins {
     id 'java'
+    id 'io.freefair.lombok' version '5.3.0'
+    id 'io.qameta.allure' version '2.8.1'
 }
 
 group 'ru.netology'
 version '1.0-SNAPSHOT'
+
+sourceCompatibility = 11
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
+
+allure {
+    autoconfigure = true
+    version = '2.13.0'
+    useJUnit5 {
+        version = '2.13.0'
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.0'
+    testImplementation 'com.codeborne:selenide:5.24.3'
+    testImplementation 'mysql:mysql-connector-java:8.0.25'
+    testImplementation 'org.postgresql:postgresql:42.2.10'
+    testImplementation 'commons-dbutils:commons-dbutils:1.7'
+    testImplementation 'io.rest-assured:rest-assured:4.4.0'
+    testImplementation 'com.google.code.gson:gson:2.8.8'
+    testImplementation 'io.qameta.allure:allure-selenide:2.15.0'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+
+
 }
+
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'db.url', System.getProperty('db.url')
+    systemProperty 'db.user', System.getProperty('db.user', "app")
+    systemProperty 'db.password', System.getProperty('db.password', "pass")
+    systemProperty 'sut.url', System.getProperty('sut.url', "http://localhost:8080/")
+    systemProperty 'allure.results.directory', 'build/allure-results'
+}
+
+configurations {
+    testCompile
 }
