--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,12 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'com.codeborne:selenide:6.0.3'
     testRuntimeOnly 'org.slf4j:slf4j-simple:1.7.32'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation 'mysql:mysql-connector-java:8.0.25'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
     testImplementation 'io.qameta.allure:allure-selenide:2.14.0'
     testImplementation 'io.rest-assured:rest-assured:4.4.0'
-    testImplementation 'org.postgresql:postgresql:42.2.24.jre7'
+    testImplementation 'org.postgresql:postgresql:42.3.1'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
@@ -45,6 +45,8 @@ test {
     systemProperty 'db.password', System.getProperty('db.password', 'pass')
     systemProperty 'sut.url', System.getProperty('sut.url', 'http://localhost:8080')
 }
+
+
 
 
 
